reorganize home.css and finish profile page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 para
                                 realizações dos TCCs gratuitamente</p>
                                
-                            <button type="button" class="btn gradientbutton m-4">
+                            <button type="button" class="btn gradientbutton-red m-4">
                                 <lead class="font-weight-bold text-font" style="font-size: 15pt;">Comece agora</lead>
                                 <!-- <h5 class="font-weight-bold text-font">Comece agora</h5> -->
                             </button>
@@ -95,7 +95,7 @@
                         <!-- Descrição -->
                         <lead class="quicksand">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             ut labore et dolore magna aliqua. Elit pellentesque habitant.</lead>
-                        <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
+                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                         <!-- Descrição -->
                         <lead class="quicksand">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             ut labore et dolore magna aliqua. Elit pellentesque habitant.</lead>
-                        <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
+                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
                         </div>
                     </div>
@@ -131,7 +131,7 @@
                         <!-- Descrição -->
                         <lead class="quicksand">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             ut labore et dolore magna aliqua. Elit pellentesque habitant.</lead>
-                        <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
+                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
                         </div>
                     </div>
@@ -149,7 +149,7 @@
                         <!-- Descrição -->
                         <lead class="quicksand">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             ut labore et dolore magna aliqua. Elit pellentesque habitant.</lead>
-                        <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
+                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
                         </div>
                     </div>
