--- a/pages/cloud.html
+++ b/pages/cloud.html
@@ -36,7 +36,7 @@
                             <p class="lead mb-4 text-font">Cloud(nuvem) para armazenar seus arquivos onlinee com
                                 segurança.</p>
                             <p class="lead text-font">Confira nosso melhores planos a abaixo:</p>
-                            <button type="button" class="btn gradientbutton" style="width: 15rem;">
+                            <button type="button" class="btn gradientbutton-red" style="width: 15rem;">
                                 <h4 class="text-font my-auto"><strong>Obter</strong></h4>
                             </button>
                         </div>
@@ -105,7 +105,7 @@
                             <p class="my-2">Video conferências</p>
                             <p class="my-2">Integração com Nuvens externas (GDrive, OneDrive)</p>
                         </div>
-                        <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
+                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                             <p class="my-2">Cliente Torrent (100KB/s max)</p>
                             <p class="my-2">Integração com Nuvens externas (GDrive, OneDrive)</p>
                         </div>
-                        <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
+                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
                         </div>
                     </div>
@@ -161,7 +161,7 @@
                             <p class="my-2">Cliente Torrent (150KB/s max)</p>
                             <p class="my-2">Integração com Nuvens externas (GDrive, OneDrive)</p>
                         </div>
-                        <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
+                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
                         </div>
                     </div>
@@ -189,7 +189,7 @@
                             <p class="my-2">Cliente Torrent (150KB/s max)</p>
                             <p class="my-2">Integração com Nuvens externas (GDrive, OneDrive)</p>
                         </div>
-                        <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
+                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
                         </div>
                     </div>
