--- a/pages/vps.html
+++ b/pages/vps.html
@@ -37,7 +37,7 @@
                                 </strong></h1>
                             <p class="lead mb-4 text-font">Hospedagem de servidores privados para usos multiplos.</p>
                             <p class="lead text-font">Confira nosso melhores planos a abaixo:</p>
-                            <button type="button" class="btn gradientbutton" style="width: 15rem;">
+                            <button type="button" class="btn gradientbutton-red" style="width: 15rem;">
                                 <h4 class="text-font my-auto"><strong>Obter</strong></h4>
                             </button>
                         </div>
@@ -103,7 +103,7 @@
                             <p class="my-2">40 GB de armazenamento;</p>
                             <p class="my-2">2 vCPU de processamento.</p>
                         </div>
-                        <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
+                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                             <p class="my-2">80 GB de armazenamento;</p>
                             <p class="my-2">3 vCPU de processamento.</p>
                         </div>
-                        <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
+                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                             <p class="my-2">200 GB de armazenamento;</p>
                             <p class="my-2">4 vCPU de processamento.</p>
                         </div>
-                        <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
+                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
                         </div>
                     </div>
@@ -174,7 +174,7 @@
                             <p class="my-2">400 GB de armazenamento;</p>
                             <p class="my-2">4 vCPU de processamento.</p>
                         </div>
-                        <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
+                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
                         </div>
                 </div>
@@ -205,7 +205,7 @@
                         <p class="my-2">40 GB de armazenamento;</p>
                         <p class="my-2">2 vCPU de processamento.</p>
                     </div>
-                    <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
+                    <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
                         <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
 
                     </div>
@@ -232,7 +232,7 @@
                         <p class="my-2">80 GB de armazenamento;</p>
                         <p class="my-2">3 vCPU de processamento.</p>
                     </div>
-                    <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
+                    <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
                         <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
                     </div>
 
