--- a/auth/login.html
+++ b/auth/login.html
@@ -26,7 +26,8 @@
 
     <div class="container-fluid py-5" id="background">
         <div class="container py-5" id="login-container">
-            <div class="col px-5 text-center">
+            <h2 class="text-center text-font quicksand">Acesse sua conta</h2>
+            <div class="col px-5 text-center my-4">
 
                 <!-- Email -->
                 <div class="row my-4">
@@ -51,7 +52,7 @@
                         </div>
                     </div>
                 </div>
-                <button type="button" class="btn gradientbutton" style="width: 30vh;">
+                <button type="button" class="btn button-black" style="width: 30vh;">
                     <h5 class="text-font my-auto p"><strong>Entrar</strong></h5>
                 </button>
 
