--- a/auth/register.html
+++ b/auth/register.html
@@ -34,7 +34,8 @@
 
     <div class="container-fluid py-5" id="background">
         <div class="container py-5" id="login-container">
-            <div class="col px-5 text-center">
+            <h2 class="text-center text-font quicksand">Crie sua conta</h2>
+            <div class="col px-5 text-center my-4">
                 <!-- Nome -->
                 <div class="row my-4">
                     <div class="col-2">
@@ -125,7 +126,7 @@
 
 
                 <!-- Botão -->
-                <button type="button" class="btn gradientbutton" style="width: 30vh;">
+                <button type="button" class="btn button-black" style="width: 30vh;">
                     <h5 class="text-font my-auto p"><strong>Cadastrar</strong></h5>
                 </button>
                 <div class="my-4">
