--- a/pages/hosting.html
+++ b/pages/hosting.html
@@ -35,7 +35,7 @@
                                 <strong>Hospedagem</strong></h1>
                             <p class="lead mb-4 text-font">Hospedagem de sites por 24 horas aos 7 dias da semana.</p>
                             <p class="lead text-font">Confira nosso melhore splanos a abaixo:</p>
-                            <button type="button" class="btn gradientbutton" style="width: 15rem;">
+                            <button type="button" class="btn gradientbutton-red" style="width: 15rem;">
                                 <h4 class="text-font my-auto"><strong>Obter</strong></h4>
                             </button>
                         </div>
@@ -103,7 +103,7 @@
                             <p class="my-2">Lagura de banda ilimitada</p>
                             <p class="my-2">1vCPU</p>
                         </div>
-                        <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
+                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
                             <p class="my-2">Lagura de banda ilimitada</p>
                             <p class="my-2">1.5vCPU</p>
                         </div>
-                        <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
+                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
                         </div>
                     </div>
@@ -155,7 +155,7 @@
                             <p class="my-2">Lagura de banda ilimitada</p>
                             <p class="my-2">2vCPU</p>
                         </div>
-                        <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
+                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
                         </div>
                     </div>
@@ -181,7 +181,7 @@
                             <p class="my-2">Lagura de banda ilimitada</p>
                             <p class="my-2">4vCPU</p>
                         </div>
-                        <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
+                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
                         </div>
                     </div>
