--- a/pages/vps.html
+++ b/pages/vps.html
@@ -37,9 +37,9 @@
                                 </strong></h1>
                             <p class="lead mb-4 text-font">Hospedagem de servidores privados para usos multiplos.</p>
                             <p class="lead text-font">Confira nosso melhores planos a abaixo:</p>
-                            <button type="button" class="btn gradientbutton-red" style="width: 15rem;">
-                                <h4 class="text-font my-auto"><strong>Obter</strong></h4>
-                            </button>
+                             <a class="btn gradientbutton-red" href="#container-price">
+                                <lead class="font-weight-bold text-font" style="font-size: 15pt;">Comece agora</lead>
+                            </a>
                         </div>
                         <div class="container mt-4 p-1" id="desc-title" style="width: 15rem;">
                             <p class="font-weight-bold my-auto">Planos a partir de:</p>
