plan button redirect to auth

--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
     <iframe src="common/header.html"
         onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
     <main class="bd-masthead" role="main">
-
-
-
         <div class="container-fluid" id="fundo" style="height: 460px;">
             <div id="row" class="row">
                 <div class="col">
@@ -50,12 +47,9 @@
                             <p class="lead mb-4 text-font">Vendemos servidores baratos e distribuímos máquinas
                                 para
                                 realizações dos TCCs gratuitamente</p>
-
-
                             <a class="btn gradientbutton-red" href="#container-price">
-                                <lead class="font-weight-bold text-font" style="font-size: 15pt;">Comece agora</lead>
+                                <lead class="font-weight-bold text-font p-2" style="font-size: 15pt;">Comece agora</lead>
                             </a>
-
 
                         </div>
                     </div>
