--- a/pages/cloud.html
+++ b/pages/cloud.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/home.css">
 
-      <!-- Fonts -->
-      <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet"> 
-      <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap" rel="stylesheet"> 
-     
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -36,8 +36,8 @@
                             <p class="lead mb-4 text-font">Cloud(nuvem) para armazenar seus arquivos onlinee com
                                 segurança.</p>
                             <p class="lead text-font">Confira nosso melhores planos a abaixo:</p>
-                             <a class="btn gradientbutton-red" href="#container-price">
-                                <lead class="font-weight-bold text-font" style="font-size: 15pt;">Comece agora</lead>
+                            <a class="btn gradientbutton-red" href="#container-price">
+                                <lead class="font-weight-bold text-font p-2" style="font-size: 15pt;">Comece agora</lead>
                             </a>
                         </div>
                         <div class="container mt-4 p-1" id="desc-title" style="width: 15rem;">
@@ -93,8 +93,8 @@
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
                             <h5 class="text-font text-center p-3"><strong>R$ 5,99
-                                <small class="text-font quicksand">/mês</small>
-                            </strong></h5>
+                                    <small class="text-font quicksand">/mês</small>
+                                </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
@@ -105,8 +105,10 @@
                             <p class="my-2">Video conferências</p>
                             <p class="my-2">Integração com Nuvens externas (GDrive, OneDrive)</p>
                         </div>
-                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
-                            <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
+                        <div class="text-center my-4">
+                            <a class="btn button-red" href="/auth/login.html">
+                                <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -120,8 +122,8 @@
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
                             <h5 class="text-font text-center p-3"><strong>R$ 9,99
-                                <small class="text-font quicksand">/mês</small>
-                            </strong></h5>
+                                    <small class="text-font quicksand">/mês</small>
+                                </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
@@ -133,8 +135,10 @@
                             <p class="my-2">Cliente Torrent (100KB/s max)</p>
                             <p class="my-2">Integração com Nuvens externas (GDrive, OneDrive)</p>
                         </div>
-                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
-                            <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
+                        <div class="text-center my-4">
+                            <a class="btn button-red" href="/auth/login.html">
+                                <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -148,8 +152,8 @@
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
                             <h5 class="text-font text-center p-3"><strong>R$ 14,99
-                                <small class="text-font quicksand">/mês</small>
-                            </strong></h5>
+                                    <small class="text-font quicksand">/mês</small>
+                                </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
@@ -161,8 +165,10 @@
                             <p class="my-2">Cliente Torrent (150KB/s max)</p>
                             <p class="my-2">Integração com Nuvens externas (GDrive, OneDrive)</p>
                         </div>
-                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
-                            <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
+                        <div class="text-center my-4">
+                            <a class="btn button-red" href="/auth/login.html">
+                                <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -176,8 +182,8 @@
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
                             <h5 class="text-font text-center p-3"><strong>R$ 19,99
-                                <small class="text-font quicksand">/mês</small>
-                            </strong></h5>
+                                    <small class="text-font quicksand">/mês</small>
+                                </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
@@ -189,9 +195,12 @@
                             <p class="my-2">Cliente Torrent (150KB/s max)</p>
                             <p class="my-2">Integração com Nuvens externas (GDrive, OneDrive)</p>
                         </div>
-                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
-                            <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
+                        <div class="text-center my-4">
+                            <a class="btn button-red" href="/auth/login.html">
+                                <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
+                            </a>
                         </div>
+
                     </div>
                 </div>
             </div>
