--- a/pages/hosting.html
+++ b/pages/hosting.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/home.css">
 
-      <!-- Fonts -->
-      <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet"> 
-      <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap" rel="stylesheet"> 
-     
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -35,8 +35,8 @@
                                 <strong>Hospedagem</strong></h1>
                             <p class="lead mb-4 text-font">Hospedagem de sites por 24 horas aos 7 dias da semana.</p>
                             <p class="lead text-font">Confira nosso melhore splanos a abaixo:</p>
-                             <a class="btn gradientbutton-red" href="#container-price">
-                                <lead class="font-weight-bold text-font" style="font-size: 15pt;">Comece agora</lead>
+                            <a class="btn gradientbutton-red" href="#container-price">
+                                <lead class="font-weight-bold text-font p-2" style="font-size: 15pt;">Comece agora</lead>
                             </a>
                         </div>
                         <div class="container mt-4 p-1" id="desc-title" style="width: 15rem;">
@@ -92,8 +92,8 @@
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
                             <h5 class="text-font text-center p-3"><strong>R$ 19,99
-                                <small class="text-font quicksand">/mês</small>
-                            </strong></h5>
+                                    <small class="text-font quicksand">/mês</small>
+                                </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
@@ -103,8 +103,10 @@
                             <p class="my-2">Lagura de banda ilimitada</p>
                             <p class="my-2">1vCPU</p>
                         </div>
-                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
-                            <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
+                        <div class="text-center my-4">
+                            <a class="btn button-red" href="/auth/login.html">
+                                <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -118,8 +120,8 @@
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
                             <h5 class="text-font text-center p-3"><strong>R$ 6,99
-                                <small class="text-font quicksand">/mês</small>
-                            </strong></h5>
+                                    <small class="text-font quicksand">/mês</small>
+                                </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
@@ -129,8 +131,10 @@
                             <p class="my-2">Lagura de banda ilimitada</p>
                             <p class="my-2">1.5vCPU</p>
                         </div>
-                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
-                            <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
+                        <div class="text-center my-4">
+                            <a class="btn button-red" href="/auth/login.html">
+                                <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -144,8 +148,8 @@
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
                             <h5 class="text-font text-center p-3"><strong>R$ 9,99
-                                <small class="text-font quicksand">/mês</small>
-                            </strong></h5>
+                                    <small class="text-font quicksand">/mês</small>
+                                </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
@@ -155,8 +159,10 @@
                             <p class="my-2">Lagura de banda ilimitada</p>
                             <p class="my-2">2vCPU</p>
                         </div>
-                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
-                            <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
+                        <div class="text-center my-4">
+                            <a class="btn button-red" href="/auth/login.html">
+                                <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -170,8 +176,8 @@
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
                             <h5 class="text-font text-center p-3"><strong>R$ 14,99
-                                <small class="text-font quicksand">/mês</small>
-                            </strong></h5>
+                                    <small class="text-font quicksand">/mês</small>
+                                </strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3 quicksand" id="price-desc-background">
@@ -181,8 +187,10 @@
                             <p class="my-2">Lagura de banda ilimitada</p>
                             <p class="my-2">4vCPU</p>
                         </div>
-                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
-                            <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
+                        <div class="text-center my-4">
+                            <a class="btn button-red" href="/auth/login.html">
+                                <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
+                            </a>
                         </div>
                     </div>
                 </div>
