--- a/pages/vps.html
+++ b/pages/vps.html
@@ -38,7 +38,7 @@
                             <p class="lead mb-4 text-font">Hospedagem de servidores privados para usos multiplos.</p>
                             <p class="lead text-font">Confira nosso melhores planos a abaixo:</p>
                              <a class="btn gradientbutton-red" href="#container-price">
-                                <lead class="font-weight-bold text-font" style="font-size: 15pt;">Comece agora</lead>
+                                <lead class="font-weight-bold text-font p-2" style="font-size: 15pt;">Comece agora</lead>
                             </a>
                         </div>
                         <div class="container mt-4 p-1" id="desc-title" style="width: 15rem;">
@@ -103,9 +103,11 @@
                             <p class="my-2">40 GB de armazenamento;</p>
                             <p class="my-2">2 vCPU de processamento.</p>
                         </div>
-                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
-                            <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
-                        </div>
+                        <div class="text-center my-4">
+                        <a class="btn button-red" href="/auth/login.html">
+                            <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
+                        </a>
+                         </div>
                     </div>
                 </div>
                 <!-- Plano 2 -->
@@ -127,9 +129,11 @@
                             <p class="my-2">80 GB de armazenamento;</p>
                             <p class="my-2">3 vCPU de processamento.</p>
                         </div>
-                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
-                            <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
-                        </div>
+                        <div class="text-center my-4">
+                        <a class="btn button-red" href="/auth/login.html">
+                            <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
+                        </a>
+                         </div>
                     </div>
                 </div>
                 <!-- Plano 3 -->
@@ -151,9 +155,11 @@
                             <p class="my-2">200 GB de armazenamento;</p>
                             <p class="my-2">4 vCPU de processamento.</p>
                         </div>
-                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
-                            <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
-                        </div>
+                        <div class="text-center my-4">
+                        <a class="btn button-red" href="/auth/login.html">
+                            <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
+                        </a>
+                         </div>
                     </div>
                 </div>
                 <!-- Plano 4 -->
@@ -174,9 +180,11 @@
                             <p class="my-2">400 GB de armazenamento;</p>
                             <p class="my-2">4 vCPU de processamento.</p>
                         </div>
-                        <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
-                            <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
-                        </div>
+                        <div class="text-center my-4">
+                        <a class="btn button-red" href="/auth/login.html">
+                            <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
+                        </a>
+                         </div>
                 </div>
 
             </div>
@@ -205,10 +213,11 @@
                         <p class="my-2">40 GB de armazenamento;</p>
                         <p class="my-2">2 vCPU de processamento.</p>
                     </div>
-                    <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
-                        <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
-
-                    </div>
+                   <div class="text-center my-4">
+                        <a class="btn button-red" href="/auth/login.html">
+                            <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
+                        </a>
+                         </div>
                 </div>
                 <div class="my-auto"><img src="../src/img/ethernet 1.png" style="width:40vh; " class="img-fluid" alt="Logo">
                 </div>
@@ -232,9 +241,11 @@
                         <p class="my-2">80 GB de armazenamento;</p>
                         <p class="my-2">3 vCPU de processamento.</p>
                     </div>
-                    <div type="button" class="button-red m-4 mx-auto" style="width: 150px;">
-                        <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
-                    </div>
+                    <div class="text-center my-4">
+                        <a class="btn button-red" href="/auth/login.html">
+                            <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
+                        </a>
+                         </div>
 
                 </div>
             </div>
