--- a/pages/hosting.html
+++ b/pages/hosting.html
@@ -33,7 +33,7 @@
                             <h1 class="mb-3 gradient-text" style="font-family: 'Josefin Sans', sans-serif;">
                                 <strong>Hospedagem</strong></h1>
                             <p class="lead mb-4 text-font">Hospedagem de sites por 24 horas aos 7 dias da semana.</p>
-                            <p class="lead text-font">Confira nosso melhore splanos a abaixo:</p>
+                            <p class="lead text-font">Confira nosso melhores planos a abaixo:</p>
                             <a class="btn gradientbutton-red" href="#container-price">
                                 <lead class="font-weight-bold text-font p-2" style="font-size: 15pt;">Comece agora</lead>
                             </a>
@@ -190,8 +190,72 @@
                             </a>
                         </div>
                     </div>
+                    
                 </div>
 
+            </div>
+
+            <!-- Titulo Hospedagem Free -->
+            <div class="container" id="price-title-container" style="width: 40rem; margin-top: 5em;">
+                <h4 class="text-center text-font p-3"><strong>Planos de Hospedagem Free</strong></h4>
+            </div>
+            <!-- Planos Hospedagem Free -->
+            <div class="row m-4 mx-auto" style="width:60rem;">
+                <!-- Plano 1 -->
+                <div class="col price-plans-background">
+                    <!-- Titulo Plano -->
+                    <div class="container my-3" id="price-plan-title">
+                        <h5 class="text-center p-2"><strong>Plano Free</strong></h5>
+                    </div>
+                    <!-- Preço  -->
+                    <div class="container my-3" id="price-plan-price">
+                        <h5 class="text-font text-center p-3"><strong>R$ 0,00
+                            <small class="text-font quicksand">/mês</small>
+                        </strong></h5>
+                    </div>
+                    <!-- Descrição -->
+                    <div class="p-3 quicksand" id="price-desc-background">
+                        <p class="my-2">1 Website</p>
+                        <p class="my-2">1 conta de email;</p>
+                        <p class="my-2">Largura de banda ilimitada</p>
+                        <p class="my-2">0.25 vCPU Website</p>
+                    </div>
+                   <div class="text-center my-4">
+                        <a class="btn button-red" href="/auth/login.html">
+                            <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
+                        </a>
+                         </div>
+                </div>
+                <div class="my-auto"><img src="../src/img/ethernet 1.png" style="width:40vh; " class="img-fluid" alt="Logo">
+                </div>
+
+                <!-- Plano 2 -->
+                <div class="col price-plans-background">
+
+                    <!-- Titulo Plano -->
+                    <div class="container my-3" id="price-plan-title">
+                        <h5 class="text-center p-2"><strong>Plano ETEC</strong></h5>
+                    </div>
+                    <!-- Preço  -->
+                    <div class="container my-3" id="price-plan-price">
+                        <h5 class="text-font text-center p-3"><strong>R$ 0,00
+                            <small class="text-font quicksand">/mês</small>
+                        </strong></h5>
+                    </div>
+                    <!-- Descrição -->
+                    <div class="p-3 quicksand" id="price-desc-background">
+                        <p class="my-2">1 Website</p>
+                        <p class="my-2">1 conta de email;</p>
+                        <p class="my-2">Largura de banda ilimitada</p>
+                        <p class="my-2">1 vCPU Website</p>
+                    </div>
+                    <div class="text-center my-4">
+                        <a class="btn button-red" href="/auth/login.html">
+                            <lead class="font-weight-bold text-font" style="font-size: 13pt;">Comprar agora</lead>
+                        </a>
+                         </div>
+
+                </div>
             </div>
 
         </div>
