--- a/auth/user/profile.html
+++ b/auth/user/profile.html
@@ -13,9 +13,9 @@
     <script src="../src/script/datedropper/datedropper.pro.min.js"></script>
 
     <!-- CSS only -->
-    <link rel="stylesheet" href="../css/auth.css">
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="/../css/auth.css">
+    <link rel="stylesheet" href="/../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/../css/home.css">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap" rel="stylesheet">
@@ -24,7 +24,7 @@
 
 <body>
     <!-- Header -->
-    <iframe src="../common/header.html"
+    <iframe src="/../common/header.html"
         onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
 
     <div class="container-fluid py-5" id="background">
@@ -101,18 +101,16 @@
                 </div>
 
                 <div class="row justify-content-between">
-
-                    <!-- <a class="btn button text-center" style="border: ;" href="#" role="button"> <h5><strong class="text-font py-2">Alterar dados</strong></h5></a> -->
-
-                    <!-- <a class="btn button" href="#" role="button"> <h5><strong class="text-font py-2">Sair</strong></h5></a> -->
-
-                    <button type="button" class="btn button-black">
-                        <lead><strong class="text-font p-4" style="font-size: 15pt;">Alterar dados</strong></lead>
-                    </button>
-                    <button type="button" class="btn button-black">
-                        <lead><strong class="text-font p-4" style="font-size: 15pt;">Sair</strong></lead>
-                    </button>
-
+                    <div class="text-center my-4">
+                        <a class="btn button-black p-2" href="/auth/user/update_profile.html">
+                            <lead class="font-weight-bold p-3 text-font" style="font-size: 13pt;">Alterar dados</lead>
+                        </a>
+                         </div>
+                         <div class="text-center my-4">
+                            <a class="btn button-black p-2">
+                                <lead class="font-weight-bold p-3 text-font" style="font-size: 13pt;">Sair</lead>
+                            </a>
+                             </div>
                 </div>
 
             </div>
@@ -124,7 +122,7 @@
             <div class="col-3 mx-5 text-center" style="height: 300px;">
                 <img src="/src/img/private 1.png" class="img" height="200px" alt="VPS Image">
                 <h4><strong>Clique para acessar o VPS</strong></h4>
-                <div class="button-plan my-4">
+                <div class="button-red my-4">
                     <h5 class="text-font p-2"><strong>Acessar</strong></h5>
                 </div>
 
@@ -133,7 +131,7 @@
             <div class="col-3 mx-5 text-center" style="height: 300px;">
                 <img src="/src/img/cloud.png" class="img" height="200px" alt="Cloud Image">
                 <h4><strong>Clique para acessar a Cloud</strong></h4>
-                <div class="button-plan my-4">
+                <div class="button-red my-4">
                     <h5 class="text-font p-2"><strong>Acessar</strong></h5>
                 </div>
 
@@ -142,7 +140,7 @@
             <div class="col-3 mx-5 text-center" style="height: 300px;">
                 <img src="/src/img/hosting.png" class="img" height="200px" alt="Hosting Image">
                 <h4><strong>Clique para acessar a Hospedagem</strong></h4>
-                <div class="button-plan my-4">
+                <div class="button-red my-4">
                     <h5 class="text-font p-2"><strong>Acessar</strong></h5>
                 </div>
 
@@ -151,7 +149,7 @@
     </div>
 
     <!-- Footer -->
-    <iframe src="../common/footer.html"
+    <iframe src="/../common/footer.html"
         onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
 
 </body>
