change form and text colors

--- a/auth/user/profile.html
+++ b/auth/user/profile.html
@@ -29,12 +29,13 @@
 
     <div class="container-fluid py-5" id="background">
         <div class="container py-5" id="login-container">
+            <h2 class="text-center text-font quicksand">Seu Perfil</h2>
             <div class="col px-5 text-center">
 
                 <!-- Nome -->
                 <div class="row my-4">
                     <div class="col-2">
-                        <p class="my-2 text-center text-font font-weight-bold" style="font-size: 15pt">Nome</p>
+                        <p class="my-2 text-center font-weight-bold" style="font-size: 15pt">Nome</p>
                     </div>
                     <div class="col">
                         <div class="container login-campo">
@@ -46,7 +47,7 @@
                 <!-- Email -->
                 <div class="row my-4">
                     <div class="col-2">
-                        <p class="my-2 text-center text-font font-weight-bold" style="font-size: 15pt">Email</p>
+                        <p class="my-2 text-center font-weight-bold" style="font-size: 15pt">Email</p>
                     </div>
                     <div class="col d-flex justify-content-center">
                         <div class="container login-campo">
@@ -59,7 +60,7 @@
                 <!-- Senha -->
                 <div class="row my-4">
                     <div class="col-2">
-                        <p class="my-2 text-center text-font font-weight-bold" style="font-size: 15pt">Senha</p>
+                        <p class="my-2 text-center font-weight-bold" style="font-size: 15pt">Senha</p>
                     </div>
                     <div class="col d-flex justify-content-center">
                         <div class="container login-campo">
@@ -72,7 +73,7 @@
                 <!-- CPF -->
                 <div class="row my-4">
                     <div class="col-2">
-                        <p class="my-2 text-center text-font font-weight-bold" style="font-size: 15pt" ;>CPF</p>
+                        <p class="my-2 text-center font-weight-bold" style="font-size: 15pt" ;>CPF</p>
                     </div>
                     <div class="col d-flex justify-content-center">
                         <div class="container login-campo">
@@ -82,15 +83,15 @@
                     </div>
                 </div>
 
-                <!-- Data de Nascimento -->
-                <div class="row my-4 justify-content-between">
-                    <div class="col">
-                        <p class="my-2 font-weight-bold text-font text-left nowrap" style="font-size: 15pt">Data de
-                            nascimento</p>
+                    <!-- Data de Nascimento -->
+                <div class="row justify-content-between my-4">
+                    <div class="col-">
+                        <p class="font-weight-bold text-nowrap" style="font-size: 15pt;margin-left: 15px;">
+                            Data de nascimento</p>
                     </div>
-                    <div class="col">
+                    <div class="col-sm">
 
-                        <input id="date-input" class="login-campo text-center" type="text" style="width: 130px;">
+                        <input id="date-input" class="login-campo text-center" type="text" style="width: 150px;">
                         <!-- datedropper init -->
                         <script>$('#date-input').dateDropper({
                                 large: true,
