--- a/auth/login.html
+++ b/auth/login.html
@@ -30,7 +30,7 @@
                 <!-- Email -->
                 <div class="row my-4">
                     <div class="col-2">
-                        <p class="my-2 text-center text-font font-weight-bold" style="font-size: 15pt">Email</p>
+                        <p class="my-2 text-center font-weight-bold" style="font-size: 15pt">Email</p>
                     </div>
                     <div class="col">
                         <div class="container login-campo">
@@ -42,7 +42,7 @@
                 <!-- Senha -->
                 <div class="row my-4">
                     <div class="col-2">
-                        <p class="my-2 text-center text-font font-weight-bold" style="font-size: 15pt">Senha</p>
+                        <p class="my-2 text-center font-weight-bold" style="font-size: 15pt">Senha</p>
                     </div>
                     <div class="col">
                         <div class="container login-campo">
