--- a/auth/register.html
+++ b/auth/register.html
@@ -35,7 +35,7 @@
                 <!-- Nome -->
                 <div class="row my-4">
                     <div class="col-2">
-                        <p class="my-2 text-center text-font font-weight-bold" style="font-size: 15pt">Nome</p>
+                        <p class="my-2 text-center font-weight-bold" style="font-size: 15pt">Nome</p>
                     </div>
                     <div class="col">
                         <div class="container login-campo">
@@ -47,7 +47,7 @@
                 <!-- Email -->
                 <div class="row my-4">
                     <div class="col-2">
-                        <p class="my-2 text-center text-font font-weight-bold" style="font-size: 15pt">Email</p>
+                        <p class="my-2 text-center font-weight-bold" style="font-size: 15pt">Email</p>
                     </div>
                     <div class="col">
                         <div class="container login-campo">
@@ -60,7 +60,7 @@
                 <!-- Senha -->
                 <div class="row my-4">
                     <div class="col-2">
-                        <p class="my-2 text-center text-font font-weight-bold" style="font-size: 15pt">Senha</p>
+                        <p class="my-2 text-center font-weight-bold" style="font-size: 15pt">Senha</p>
                     </div>
                     <div class="col">
                         <div class="container login-campo">
@@ -73,7 +73,7 @@
                 <!-- CPF -->
                 <div class="row my-4">
                     <div class="col-2">
-                        <p class="my-2 text-center text-font font-weight-bold" style="font-size: 15pt">CPF</p>
+                        <p class="my-2 text-center font-weight-bold" style="font-size: 15pt">CPF</p>
                     </div>
                     <div class="col">
                         <div class="container login-campo">
@@ -86,11 +86,10 @@
                 <!-- Data de Nascimento -->
                 <div class="row justify-content-between my-4">
                     <div class="col-">
-                        <p class="font-weight-bold text-font text-nowrap" style="font-size: 15pt;margin-left: 15px;">
+                        <p class="font-weight-bold text-nowrap" style="font-size: 15pt;margin-left: 15px;">
                             Data de nascimento</p>
                     </div>
                     <div class="col-sm">
-
                         <input id="date-input" class="login-campo text-center" type="text" style="width: 150px;">
                         <!-- datedropper init -->
                         <script>$('#date-input').dateDropper({
@@ -104,7 +103,7 @@
                 <!-- Aluno etec -->
                 <div class="row justify-content-between my-4">
                     <div class="col-">
-                        <p class="font-weight-bold text-font text-nowrap" style="font-size: 15pt;margin-left: 15px;">
+                        <p class="font-weight-bold text-nowrap" style="font-size: 15pt;margin-left: 15px;">
                             Aluno da ETEC</p>
                     </div>
                     <div class="col-sm">
