--- a/auth/user/update_profile.html
+++ b/auth/user/update_profile.html
@@ -35,7 +35,7 @@
                 <!-- Nome -->
                 <div class="row my-4">
                     <div class="col-2">
-                        <p class="my-2 text-center text-font font-weight-bold" style="font-size: 15pt">Nome</p>
+                        <p class="my-2 text-center font-weight-bold" style="font-size: 15pt">Nome</p>
                     </div>
                     <div class="col">
                         <div class="container login-campo">
@@ -47,7 +47,7 @@
                 <!-- Email -->
                 <div class="row my-4">
                     <div class="col-2">
-                        <p class="my-2 text-center text-font font-weight-bold" style="font-size: 15pt">Email</p>
+                        <p class="my-2 text-center font-weight-bold" style="font-size: 15pt">Email</p>
                     </div>
                     <div class="col d-flex justify-content-center">
                         <div class="container login-campo">
@@ -60,12 +60,11 @@
                 <!-- Senha -->
                 <div class="row my-4">
                     <div class="col-2">
-                        <p class="my-2 text-center text-font font-weight-bold" style="font-size: 15pt">Senha</p>
+                        <p class="my-2 text-center font-weight-bold" style="font-size: 15pt">Senha</p>
                     </div>
                     <div class="col d-flex justify-content-center">
                         <div class="container login-campo">
-                            <input class="form-control" style="border-width: 0px; height: 33px;">
-
+                            <input type="password" class="form-control" style="border-width: 0px; height: 33px;">
                         </div>
                     </div>
                 </div>
@@ -73,7 +72,7 @@
                 <!-- Aluno etec -->
                 <div class="row justify-content-between my-4">
                     <div class="col-">
-                        <p class="font-weight-bold text-font text-nowrap" style="font-size: 15pt;margin-left: 15px;">
+                        <p class="font-weight-bold text-nowrap" style="font-size: 15pt;margin-left: 15px;">
                             Aluno da ETEC</p>
                     </div>
                     <div class="col-sm">
