--- a/common/footer.html
+++ b/common/footer.html
@@ -16,7 +16,6 @@
 <!-- Footer -->
 
 <div class="row m-0 p-0">
-    
     <div class="col p-0">
         <!-- Serviços -->
         <div class="container-fluid" id="footer-services-backgroud">
@@ -24,28 +23,36 @@
             <!-- Serviços de Hospedagem -->
             <div class="col">
                 <h4 id="footer-services-title">Serviços de Hospedagem</h4>
-                <lead class="text-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</lead>
-
+                <lead class="text-font">
+                    <p>Ver Planos</p>
+                    <p>Comunicar planos personalizados</p>
+                </lead>
             </div>
             <!-- Serviços VPS -->
             <div class="col">
                 <h4 id="footer-services-title">Serviços VPS</h4>
-                <lead class="text-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</lead>
-
+                <lead class="text-font">
+                    <p>Ver Planos</p>
+                    <p>Comunicar planos personalizados</p>
+                </lead>
             </div>
             <!-- Informações -->
             <div class="col">
                 <h4 id="footer-services-title">Informações</h4>
-                <lead class="text-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</lead>
-
+                <lead class="text-font">
+                    <p>Historia do SudoHosting</p>
+                    <p>Entrar em contato</p>
+                    <p>Direitos autorais</p>
+                </lead>
             </div>
             <!-- Comunicação -->
             <div class="col">
                 <h4 id="footer-services-title">Comunicação</h4>
-                <lead class="text-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</lead>
-
+                <lead class="text-font">
+                    <p>Sobre</p>
+                    <p>Entrar em contato</p>
+                </lead>
             </div>
-      
         </div>
     </div>
     <div class="col p-0">
